cabal-version:      3.4
name:               hgeometry-vector
version:            1.0.0.0
synopsis:
    Small Vectors with type level tags
description:
    Vectors indexed by type level natural numbers.
license:            MIT
license-file:       LICENSE
author:             Frank Staals
maintainer:         frank@fstaals.net
-- copyright:
category:           Geometry
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

tested-with:
    GHC == 9.2.5
  , GHC == 9.4.4
  , GHC == 9.6.1

--------------------------------------------------------------------------------
-- * Commons

common setup
    ghc-options: -O2 -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
                 -fspecialise-aggressively -fexpose-all-unfoldings
    build-depends:
        base                    >= 4.16.1.0    && < 5
      , hgeometry-combinatorial >= 1.0.0.0     && < 2
      , containers              >= 0.6         && < 1
      , vector                  >= 0.13        && < 1
      , lens                    >= 5.2         && < 6
      , deepseq                 >= 1.1         && < 2
      , semigroupoids           >= 5           && < 7
      , semigroups              >= 0.18        && < 1
      , random                  >= 1.2         && < 2
      , mtl                     >= 2.2         && < 3
      -- , witherable              >= 0.4      && <
      , linear                  >= 1.21        && < 2
      , semialign               >= 1.2         && < 2
      , these                   >= 1.1         && < 2

      , ghc-typelits-natnormalise >= 0.7.7     && < 1
      , ghc-typelits-knownnat     >= 0.7.6     && < 1

    default-language: GHC2021

    default-extensions:
        DataKinds
      , TypeFamilies
      , GADTs
      , KindSignatures
      , ScopedTypeVariables
      , DerivingStrategies
      , DerivingVia
      , GeneralizedNewtypeDeriving
      , DeriveGeneric
      , DeriveFunctor
      , PatternSynonyms
      , TupleSections
      , LambdaCase
      , ViewPatterns
      , FunctionalDependencies

common quickcheck-setup
    build-depends:
        QuickCheck              >= 2.10
      , quickcheck-instances

common test-setup
    import: quickcheck-setup
    build-tool-depends: hspec-discover:hspec-discover
    ghc-options:
         -Wall
         -fno-warn-unticked-promoted-constructors
         -fno-warn-partial-type-signatures
         -fno-warn-missing-signatures
         -fno-warn-type-defaults
         -fno-warn-orphans
    build-depends:
        hspec                   >= 2.9
      , hgeometry-vector
      , hgeometry-vector:quickcheck


--------------------------------------------------------------------------------
-- * This is the main library, it gives various implementations of
-- d-dimensional vectors with numbers of type r.

library
    import:           setup
    hs-source-dirs:   src
    exposed-modules:
        HGeometry.Vector
      , HGeometry.Properties
      , HGeometry.Vector.Class

  other-modules:
        HGeometry.Vector.Type

--------------------------------------------------------------------------------
-- * Helper Libraries

library quickcheck
    import: setup, quickcheck-setup
    visibility: public
    hs-source-dirs: src-quickcheck
    exposed-modules:
      HGeometry.Vector.Instances
    build-depends:
         hgeometry-vector

--------------------------------------------------------------------------------
-- * Testss


test-suite hgeometry-vector-hspec
   import:           setup, test-setup
   type:             exitcode-stdio-1.0
   main-is:          Main.hs
   other-modules:
       Spec
       VectorSpec
   hs-source-dirs:   test

--------------------------------------------------------------------------------

test-suite hgeometry-vector-doctest
    import:           setup, test-setup
    type:             exitcode-stdio-1.0
    main-is:          doctests.hs
    build-tool-depends:  doctest-driver-gen:doctest-driver-gen
    build-depends:
       doctest             >= 0.8

--------------------------------------------------------------------------------
-- * Benchmarks

benchmark hgeometry-vector-bench
    import: setup, test-setup
    hs-source-dirs: bench
    main-is: Benchmarks.hs
    type: exitcode-stdio-1.0
    build-depends:
       , hgeometry-vector
       , tasty-bench              >= 0.3
       , tasty                    >= 1.4
