cabal-version:      3.4
name:               hgeometry
version:            1.0.0.0
synopsis:            Geometric Algorithms, Data structures, and Data types.
description:
  HGeometry provides some basic geometry types, and geometric algorithms and
  data structures for them. The main two focusses are: (1) Strong type safety,
  and (2) implementations of geometric algorithms and data structures with good
  asymptotic running time guarantees. Note that HGeometry is still highly experimental, don't be surprised to find bugs.

homepage:           https://fstaals.net/software/hgeometry
license:            MIT
license-file:       LICENSE
author:             Frank Staals
maintainer:         frank@fstaals.net
-- copyright:
category:           Geometry
build-type:         Simple
extra-doc-files:
    README.md
    changelog.org
-- extra-source-files:
data-dir: data
data-files:
    polygons.simple
    polygons.multi
    ipe/basic.isy
    test-with-ipe/**/*.ipe

tested-with:
    GHC == 9.2.5
  , GHC == 9.4.4
  , GHC == 9.6.1

source-repository head
  type:     git
  location: https://github.com/noinia/hgeometry

--------------------------------------------------------------------------------

common all-setup
    ghc-options: -O2 -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
                -fspecialise-aggressively -fexpose-all-unfoldings

    build-depends:
        base                      >= 4.16.1.0      && < 5
      , hgeometry-combinatorial   >= 1.0.0.0       && < 2
      , hiraffe                   >= 0.1           && < 1
      , containers                >= 0.6           && < 1
      , dlist                     >= 0.7           && < 1
      , bytestring                >= 0.11          && < 1
      , vector                    >= 0.13          && < 1
      , lens                      >= 5.2           && < 6
      , deepseq                   >= 1.1           && < 2
      , semigroupoids             >= 6.0.0.1       && < 7
      , foldable1-classes-compat  >= 0.1           && < 1
      , semigroups                >= 0.18          && < 1
      , random                    >= 1.2           && < 2
      , witherable                >= 0.4           && < 1
      , linear                    >= 1.21          && < 2
      , data-clist                >= 0.2           && < 1
      , aeson                     >= 2.1           && < 3
      , nonempty-vector           >= 0.2           && < 1
      , mtl                       >= 2.2           && < 3
      , data-default-class        >= 0.1           && < 1
      , MonadRandom               >= 0.5           && < 1
      , reflection                >= 2.1.7         && < 3
      , filepath                  >= 1.4.100       && < 2
      , file-io                   >= 0.1           && < 1

      , ghc-typelits-natnormalise >= 0.7.7         && < 1
      , ghc-typelits-knownnat     >= 0.7.6         && < 1

    default-language: GHC2021

    default-extensions:
        DataKinds
      , TypeFamilies
      , GADTs
      , KindSignatures
      , ScopedTypeVariables
      , DerivingStrategies
      , DerivingVia
      , GeneralizedNewtypeDeriving
      , DeriveGeneric
      , DeriveFunctor
      , PatternSynonyms
      , TupleSections
      , LambdaCase
      , ViewPatterns
      , FunctionalDependencies

common point-setup
    build-depends:
        hgeometry:vector

common vector-setup
    build-depends:
       semialign                  >= 1.2        && < 2
     , these                      >= 1.1        && < 2

common kernel-setup
    build-depends:
        hgeometry:vector
      , hgeometry:point
      , semialign

common hgeometry-setup
    build-depends:
        hgeometry:vector
      , hgeometry:point
      , hgeometry:kernel

common doctest
    build-depends:
      , doctest                    >= 0.8      && < 1

common all-quickcheck-setup
    ghc-options:
         -Wall
         -fno-warn-unticked-promoted-constructors
         -fno-warn-partial-type-signatures
         -fno-warn-missing-signatures
         -fno-warn-type-defaults
         -fno-warn-orphans
    build-depends:
        hspec                           >= 2.9     && < 3
      , QuickCheck                      >= 2.10    && < 3
      , quickcheck-instances            >= 0.3     && < 1


common vector-quickcheck-setup
   build-depends:
        hgeometry:vector

common point-quickcheck-setup
   build-depends:
        hgeometry:point
      , hgeometry:vector-quickcheck

common quickcheck-setup
    build-depends:
        hgeometry:kernel-quickcheck
      , hgeometry:vector-quickcheck
      , hgeometry:point-quickcheck
      , hgeometry

common kernel-quickcheck-setup
    build-depends:
      , hgeometry:vector
      , hgeometry:point
      , hgeometry:kernel
      , hgeometry-combinatorial:quickcheck
      , hgeometry:vector-quickcheck
      , hgeometry:point-quickcheck

common ipe-setup
    build-depends:
        hgeometry
      , hgeometry:vector
      , hgeometry:point
      , hgeometry:kernel
      , hexpat                  >= 0.20.9        && < 1
      , parsec                  >= 3             && < 4
      , text                    >= 2             && < 3
      , typed-process           >= 0.2.6         && < 1
      , colour                  >= 2.3.6         && < 3
      , vinyl                   >= 0.14          && < 1
      , singletons              >= 3.0           && < 4
      , singletons-th           >= 3.0           && < 4
      , template-haskell        >= 2.10          && < 3
      , directory               >= 1.3.8         && < 2

common svg-setup
    build-depends:
        hgeometry
      , hgeometry:vector
      , hgeometry:point
      , hgeometry:kernel
      , hgeometry:ipe
      , miso                      >= 1.8           && < 2
      , lucid                     >= 2             && < 3
      , lucid-svg                 >= 0.7           && < 1
      , vinyl
      , colour
      , singletons
      , text

common ipe-test-setup
    ghc-options:
         -Wall
         -fno-warn-unticked-promoted-constructors
         -fno-warn-partial-type-signatures
         -fno-warn-missing-signatures
         -fno-warn-type-defaults
         -fno-warn-orphans
    build-depends:
        hspec                   >= 2.9
      -- , QuickCheck              >= 2.10
      -- , quickcheck-instances
      , hgeometry:ipe

--------------------------------------------------------------------------------
-- * Libraries
--------------------------------------------------------------------------------

--------------------------------------------------------------------------------
-- * HGeometry Vector

library vector
    import: all-setup, vector-setup
    visibility: public
    hs-source-dirs: vector/src
    exposed-modules:
        HGeometry.Vector
      , HGeometry.Properties
      , HGeometry.Vector.Class

    other-modules:
        HGeometry.Vector.Type

--------------------------------------------------------------------------------
-- * HGeometry Point

library point
    import: all-setup, point-setup
    visibility: public
    hs-source-dirs: point/src
    exposed-modules:
       HGeometry.Point
       HGeometry.Point.Class
       HGeometry.Point.PointF
       HGeometry.Point.EuclideanDistance
       HGeometry.Point.Orientation
      -- HGeometry.Point.Affine

    -- reexported-modules:
    --     HGeometry.Point.Unpacked
    --   , HGeometry.Point.Class
    --   , HGeometry.Point.PointF

    other-modules:
        HGeometry.Point.Type
        HGeometry.Point.Orientation.Degenerate
        HGeometry.Point.Quadrants

--------------------------------------------------------------------------------
-- * HGeometry Kernel

library kernel
    import: all-setup, kernel-setup
    visibility: public
    hs-source-dirs: kernel/src
    exposed-modules:
        HGeometry.Kernel

        HGeometry.Matrix
        HGeometry.Matrix.Class

        HGeometry.Line
        HGeometry.Line.Class
        HGeometry.Line.PointAndVector

        HGeometry.Line.LineEQ
        HGeometry.Line.NonVertical.Class

        HGeometry.HyperPlane
        HGeometry.HyperPlane.Class
        HGeometry.HyperPlane.NonVertical

        HGeometry.Duality

        HGeometry.HalfSpace
        HGeometry.HalfLine

        -- HGeometry.HalfPlane

        HGeometry.Box
        HGeometry.Box.Class
    -- --
    -- --    HGeometry.SoS.Point
    -- --    HGeometry.SoS.Orientation
    -- --    HGeometry.SoS.Determinant
    -- --
        HGeometry.Interval
        HGeometry.Interval.Class
        HGeometry.Interval.EndPoint

        HGeometry.Boundary

        HGeometry.LineSegment
        HGeometry.LineSegment.Class

        HGeometry.Intersection

        HGeometry.Triangle
        HGeometry.Triangle.Class

        HGeometry.Ball
        HGeometry.Ball.Class
        HGeometry.Ball.CenterAndRadius

        HGeometry.Transformation

        HGeometry.Direction

        HGeometry.Viewport

        HGeometry.Ellipse


    other-modules:
        HGeometry.Line.Intersection
        HGeometry.Box.Internal
        HGeometry.Box.Boxable
        HGeometry.Box.Corners
        HGeometry.Box.Sides
        HGeometry.HyperPlane.Internal
        HGeometry.Matrix.Internal
        HGeometry.Matrix.ByRows
        HGeometry.Transformation.Internal

        HGeometry.LineSegment.Internal
        HGeometry.LineSegment.Intersection

        HGeometry.Interval.HalfOpen
        HGeometry.Interval.Internal

--------------------------------------------------------------------------------
-- * HGeometry Library


library
    import:           all-setup,hgeometry-setup
    hs-source-dirs:   src
    exposed-modules:
        HGeometry

        HGeometry.PlaneGraph

        HGeometry.Polygon.Class

        HGeometry.Polygon.Simple
        HGeometry.Polygon.Simple.Class
--
        HGeometry.Polygon.Convex
        HGeometry.Polygon.Convex.Class
        HGeometry.Polygon.Convex.Tangents
        HGeometry.Polygon.Convex.Random

        HGeometry.Polygon.Monotone


        HGeometry.PolyLine
        HGeometry.PolyLine.Class
--
        HGeometry.ConvexHull
        HGeometry.ConvexHull.GrahamScan
        HGeometry.ConvexHull.DivideAndConquer
        HGeometry.ConvexHull.QuickHull
        HGeometry.ConvexHull.JarvisMarch

        HGeometry.ConvexHull.R3.Naive


        HGeometry.BezierSpline

        HGeometry.ClosestPair
        HGeometry.ClosestPair.Naive
        HGeometry.ClosestPair.DivideAndConquer

        HGeometry.IntervalTree

        -- HGeometry.HalfPlane.CommonIntersection

        HGeometry.Polygon.Triangulation.TriangulateMonotone
        -- HGeometry.Polygon.Triangulation.MakeMonotone

        HGeometry.LowerEnvelope
        HGeometry.LowerEnvelope.Naive
        HGeometry.LowerEnvelope.VertexForm
        HGeometry.LowerEnvelope.AdjListForm

        HGeometry.VoronoiDiagram


        HGeometry.SegmentTree
        HGeometry.SegmentTree.Base
        -- HGeometry.SegmentTree.R2
        HGeometry.SegmentTree.CanonicalSubSet

        HGeometry.RangeTree
        HGeometry.RangeTree.Base

    other-modules:
       HGeometry.Polygon.Simple.Implementation
       HGeometry.Polygon.Simple.InPolygon

       HGeometry.Polygon.Convex.Implementation
       HGeometry.Polygon.Convex.MinkowskiSum
       HGeometry.Polygon.Triangulation.Types

       HGeometry.PlaneGraph.Type

       HGeometry.LowerEnvelope.Type
       -- HGeometry.LowerEnvelope.AtMostThree
       -- HGeometry.LowerEnvelope.Triangulate

       -- HGeometry.LowerEnvelope.Sample

       HGeometry.VoronoiDiagram.ViaLowerEnvelope

    -- other-extensions:

--------------------------------------------------------------------------------
-- * HGeometry-Ipe Library

library ipe
    import:           all-setup, ipe-setup
    visibility:       public
    hs-source-dirs:   ipe/src
    exposed-modules:
          Ipe
          Ipe.Literal
          Ipe.Value
          Ipe.Color
          Ipe.Attributes
          Ipe.Types
          Ipe.Writer
          Ipe.Reader
          Ipe.PathParser
          Ipe.IpeOut
          Ipe.FromIpe
          Ipe.Path
          Ipe.Matrix
          Ipe.Layer
          Ipe.Content

          Ipe.IpeRender
          Ipe.IpeToIpe


    other-modules:
          Ipe.ParserPrimitives

--------------------------------------------------------------------------------
-- * svg

library svg
    import: all-setup, svg-setup
    visibility: public
    hs-source-dirs: svg/src
    exposed-modules:
        HGeometry.Miso.Svg
        HGeometry.Miso.OrphanInstances
        HGeometry.Svg

    other-modules:
        HGeometry.Miso.Svg.Writer
        Miso.String.Util

--------------------------------------------------------------------------------
-- * HGeometry-quickcheck

library quickcheck
    import: all-setup, hgeometry-setup, all-quickcheck-setup, quickcheck-setup
    visibility: public
    hs-source-dirs: src-quickcheck
    exposed-modules:
      HGeometry.Instances
      HGeometry.Polygon.Instances
    other-modules:
      Paths_hgeometry
    autogen-modules:
      Paths_hgeometry
    build-depends:
         hgeometry
       , cereal   >= 0.5    && < 1

library kernel-quickcheck
    import: all-setup, all-quickcheck-setup, kernel-quickcheck-setup
    visibility: public
    hs-source-dirs: kernel/src-quickcheck
    exposed-modules:
      HGeometry.Kernel.Instances
      HGeometry.Kernel.Test.Box

library point-quickcheck
    import: all-setup, point-setup, all-quickcheck-setup, point-quickcheck-setup
    visibility: public
    hs-source-dirs: point/src-quickcheck
    exposed-modules:
      HGeometry.Point.Instances
    build-depends:
         hgeometry:point

library vector-quickcheck
    import: all-setup, all-quickcheck-setup, vector-quickcheck-setup
    visibility: public
    hs-source-dirs: vector/src-quickcheck
    exposed-modules:
      HGeometry.Vector.Instances
    build-depends:
         hgeometry:vector

--------------------------------------------------------------------------------
-- * Test Suites
--------------------------------------------------------------------------------


test-suite hgeometry-vector-hspec
   import:           all-setup, vector-setup, all-quickcheck-setup, vector-quickcheck-setup
   build-tool-depends: hspec-discover:hspec-discover
   type:             exitcode-stdio-1.0
   main-is:          Main.hs
   other-modules:
       Spec
       VectorSpec
   hs-source-dirs: vector/test
   build-depends:
       hgeometry:vector-quickcheck

--------------------------------------------------------------------------------

test-suite hgeometry-vector-doctest
    import:           all-setup, all-quickcheck-setup, vector-quickcheck-setup, doctest
    type:             exitcode-stdio-1.0
    main-is:          vector/doctests.hs
    build-tool-depends:  doctest-driver-gen:doctest-driver-gen

--------------------------------------------------------------------------------
-- ** HGeometry-Point


test-suite hgeometry-point-hspec
  import:           all-setup, point-setup, all-quickcheck-setup, point-quickcheck-setup
  build-tool-depends: hspec-discover:hspec-discover
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs: point/test
  other-modules:
      Spec
      Point2Spec
      PointSpec
      PointSpec
      Point.CmpAround
  build-depends:
      hgeometry:point-quickcheck

test-suite hgeometry-point-doctest
    import:           all-setup, point-setup, all-quickcheck-setup, doctest
    type:             exitcode-stdio-1.0
    main-is:          point/doctests.hs
    build-tool-depends:  doctest-driver-gen:doctest-driver-gen


--------------------------------------------------------------------------------
-- ** HGeometry-Kernel

test-suite hgeometry-kernel-hspec
  import:           all-setup, kernel-setup, all-quickcheck-setup, kernel-quickcheck-setup
  build-tool-depends: hspec-discover:hspec-discover
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
      Spec
      Point2Spec
      HGeometry.LineSegmentSpec
      HGeometry.BallSpec
      HGeometry.BoxSpec
      HGeometry.MatrixSpec
      HGeometry.HalfSpaceSpec
      HGeometry.HyperPlaneSpec
      HGeometry.IntervalSpec
      HGeometry.TriangleSpec
  hs-source-dirs: kernel/test
  build-depends:
      hgeometry:kernel-quickcheck

test-suite hgeometry-kernel-doctest
    import:           all-setup, kernel-setup, kernel-quickcheck-setup, doctest
    type:             exitcode-stdio-1.0
    main-is:          kernel/doctests.hs
    build-tool-depends:  doctest-driver-gen:doctest-driver-gen

--------------------------------------------------------------------------------
-- ** HGeometry

test-suite hgeometry-hspec
  import:           all-setup, hgeometry-setup, all-quickcheck-setup, quickcheck-setup
  build-tool-depends: hspec-discover:hspec-discover
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
      Spec
      ConvexHull.ConvexHullSpec
      ClosestPair.ClosestPairSpec
      IntervalTreeSpec
      LowerEnvelope.NaiveSpec
      Polygon.Convex.ConvexSpec
      Polygon.TriangulateSpec
      SegmentTreeSpec
      SegmentTree.R2Spec
      RangeTreeSpec

  hs-source-dirs: test
  build-depends:
      hgeometry:quickcheck

test-suite hgeometry-doctest
    import:           all-setup, all-quickcheck-setup, quickcheck-setup, doctest
    type:             exitcode-stdio-1.0
    main-is:          doctests.hs
    build-tool-depends:  doctest-driver-gen:doctest-driver-gen

-- tests with ipe dependency
test-suite hgeometry-with-ipe-hspec
  import:           all-setup, ipe-setup, all-quickcheck-setup, quickcheck-setup
  build-tool-depends: hspec-discover:hspec-discover
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
      Spec
      Paths_hgeometry
      Golden
      Test.Util
      Polygon.Simple.InPolygonSpec
      Polygon.Convex.ConvexSpec
      Polygon.Convex.ConvexSpec
      VoronoiDiagram.VoronoiSpec
      -- LineSegmentSpec
      Polygon.Triangulation.TriangulateMonotoneSpec

  hs-source-dirs:   test-with-ipe/test
  build-depends:
        hspec-with-tempfile >= 0.1
      , hgeometry:ipe

--------------------------------------------------------------------------------
-- ** Ipe Tests

test-suite hgeometry-ipe-hspec
  import:           all-setup, ipe-setup, ipe-test-setup
  build-tool-depends: hspec-discover:hspec-discover
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
      Spec
      Ipe.ReaderSpec
  hs-source-dirs:   ipe/test

test-suite hgeometry-ipe-doctest
    import:           all-setup, ipe-test-setup, doctest
    type:             exitcode-stdio-1.0
    main-is:          ipe/doctests.hs
    build-tool-depends:  doctest-driver-gen:doctest-driver-gen

--------------------------------------------------------------------------------
-- ** Svg Tests

-- test-suite hgeometry-svg-hspec
--   import:           all-setup, all-quickcheck-setup, quickcheck-setup
--   build-tool-depends: hspec-discover:hspec-discover
--   type:             exitcode-stdio-1.0
--   main-is:          Main.hs
--   other-modules:
--       Spec
--   hs-source-dirs:   test

--------------------------------------------------------------------------------
-- * Benchmarks
--------------------------------------------------------------------------------

--------------------------------------------------------------------------------
-- ** HGeometry Benchmarks

benchmark hgeometry-benchmarks
  import: all-setup, hgeometry-setup
  hs-source-dirs: bench

  main-is: Benchmarks.hs
  type: exitcode-stdio-1.0

  other-modules:
    ConvexHull.Bench

    ConvexHull.GrahamBench
    ConvexHull.GrahamV2
    ConvexHull.GrahamInt
    ConvexHull.GrahamFastest

    -- ConvexHull.GrahamClassy

    Util
  build-depends: tasty-bench           >= 0.3  && < 1
               , hgeometry
               , deepseq-generics      >= 0.2  && < 1
               , hashable              >= 1.4  && < 2


benchmark hgeometry-vector-bench
    import: all-setup, vector-setup, all-quickcheck-setup, vector-quickcheck-setup
    hs-source-dirs: vector/bench
    main-is: Benchmarks.hs
    type: exitcode-stdio-1.0
    build-depends:
         tasty-bench              >= 0.3   && < 1
       , tasty                    >= 1.4   && < 2
